Comentário explicando a função do código

--- a/at8.html
+++ b/at8.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<!-- A cor do fundo do título terá a sua cor alterada para verde se o número digitado for par, e vermelhor se for ímpar -->
 
 </head> 
 
