Comentário explicando a função do código

--- a/at9.html
+++ b/at9.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<!-- A função do código é somar números que o usuário digite no input e retorne o valor da soma para o usuário -->
 
 </head> 
 
